# NEXT_text2speech

./: CMakeLists.txt  README.md  package.xml  use.txt
launch/: gtts.launch  tt.launch
lib/VachanaTTS/: README.md  app-th.bat  app-th.py  app.bat  app.py  finetune-webui.bat  install.bat  requirements.txt
lib/VachanaTTS/finetune/: convert_original_discriminator_checkpoint.py  finetune-webui.py  requirements.txt  run_vits_finetuning.py
lib/VachanaTTS/finetune/dataset/: put_datasetfolder_here.txt
lib/VachanaTTS/finetune/monotonic_align/: __init__.py  core.c  core.pyx  setup.py
lib/VachanaTTS/finetune/training_config_examples/: finetune_english.json  finetune_mms.json  finetune_mms_kor.json  finetune_mms_thai.json
lib/VachanaTTS/finetune/utils/: __init__.py  configuration_vits.py  feature_extraction_vits.py  modeling_vits_training.py  plot.py  romanize.py
lib/VachanaTTS/inference/: dubbing.py  openvoice.py  podcast.py  thaicleantext.py  tts_with_voiceclone.py
lib/VachanaTTS/openvoice/: se_extractor.py
src/: gtts_node.py  robot.py  vachanatts_node.py
